tests/data/bad/bad_attr.py
from ntc import CN

from ..good.good import cfg

cfg = CN(cfg)
cfg.NEW = "bar"
